relocate default database file to user home;
this fixes the issue when executing a runnable JAR file and there's need to get a real file for sqlite driver to work properly;